@@ -1,6 +1,12 @@
 2012-06-18
 
+	* src/mimeview.[ch]: disabled 'Save all...' menu if attached files
+	  with file name do not exist.
+
+2012-06-18
+
 	* src/messageview.c: added attached filenames to the tool menu.
+
 2012-06-15
 
 	* src/messageview.[ch]: changed the Text/Attachments tab to a toggle
